--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-quill": "^1.3.5",
     "react-router-dom": "^7.6.2",
     "react-scroll": "^1.9.3",
+    "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
