--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dompurify": "^3.2.6",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.562.0",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
